完善监听器写法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.espoir.glidedsldemo"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +16,7 @@
         android:theme="@style/Theme.GlideDsl"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.espoir.glidedsl.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GlideDsl">
