--- a/glidedsl/build.gradle
+++ b/glidedsl/build.gradle
@@ -51,4 +51,7 @@ dependencies {
         exclude(group: 'com.squareup.okhttp3')
     }
     compileOnly "com.zlc.glide:webpdecoder:2.0.4.12.0"
+
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 }
