--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,19 @@ android {
 dependencies {
     implementation("androidx.appcompat:appcompat:1.2.0")
     implementation("androidx.core:core-ktx:1.5.0")
-    implementation("com.github.yyued:SVGAPlayer-Android:2.6.1") {
-        exclude(group: 'org.jetbrains.kotlin')
-    }
-    // 手Y SVGA管理
-    implementation('com.github.YvesCheung:SVGAGlidePlugin:4.13.3') {
-        exclude group: 'com.github.yyued', module: 'SVGAPlayer-Android'
-        exclude(group: 'org.jetbrains.kotlin')
-    }
-    implementation("com.github.bumptech.glide:glide:$glide_version")
-    implementation "com.zlc.glide:webpdecoder:2.0.4.12.0"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-
-    implementation project(":glidedsl")
+//    implementation("com.github.yyued:SVGAPlayer-Android:2.6.1") {
+//        exclude(group: 'org.jetbrains.kotlin')
+//    }
+//    // 手Y SVGA管理
+//    implementation('com.github.YvesCheung:SVGAGlidePlugin:4.13.3') {
+//        exclude group: 'com.github.yyued', module: 'SVGAPlayer-Android'
+//        exclude(group: 'org.jetbrains.kotlin')
+//    }
+//    implementation("com.github.bumptech.glide:glide:$glide_version")
+//    implementation "com.zlc.glide:webpdecoder:2.0.4.12.0"
+//
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+//
+//    implementation project(":glidedsl")
 }
